# pygds

./: .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.py
include/: PyGDS.h  PyGDS_CPP.h
pygds/: __init__.py
pygds/data/: ceu_exon.gds
pygds/include/: CoreDEF.h  PyGDS.h  PyGDS2.h  PyGDS_CPP.h
src/: PyCoreArray.cpp  pygds.cpp
src/CoreArray/: dAny.cpp  dBitGDS_Bit2.h  dFile.cpp  dFile.h  dPlatform.cpp  dSparse.h
tests/: test_pygds.py
